--- a/fr_FRA.strings
+++ b/fr_FRA.strings
@@ -26,3 +26,9 @@
 "bounce_label" = "Rebond";
 "gross_margin_label" = "Marge Brute";
 "gross_margin_description" = "Marge Brute = Revenu - Dépense";
+"sale_price_label" = "Prix de Vente";
+"status_label" = "Statut";
+"delivered_date_group_label" = "Date Date de livraison";
+"returned_date_group_label" = "Date Retour";
+"shipped_date_group_label" = "Date d'envoi";
+"order_items_view_label" = "Items Commandés";
