--- a/fr_FRA.strings
+++ b/fr_FRA.strings
@@ -6,21 +6,21 @@
 "first_name_label" = "Prenom";
 "city" = "Ville";
 "country" = "Pays";
-"age_label" = "Âge";
-"age_description" = "Âge du personne";
-"gender_label" = "Genre";
+"age_label" = "Age";
+"age_description" = "Age de la personne";
+"gender_label" = "Sexe";
 "date_group_label" = "Date";
 "date_label" = "Date";
-"year_label" = "An";
-"week_label" = "Semain";
+"year_label" = "Année";
+"week_label" = "Semaine";
 "month_label" = "Mois";
 "amount_label" = "Montant";
 "campaign_label" = "Campagne";
-"click_label" = "Cliquez";
+"click_label" = "Clique";
 "impression_label" = "Impression";
-"spend_label" = "Dépenser";
+"spend_label" = "Dépense";
 "revenue_label" = "Revenu";
-"average_label" = "Moyen";
+"average_label" = "Moyenne";
 "ctr_label" = "Taux de Clic";
 "cvr_label" = "Taux de Conversion";
 "bounce_label" = "Rebond";
